# Deep-Packet-Analyzer

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  PLANNING.md  README.md  WINDOWS_SETUP.md  docker-compose.yml  example_rules.json  generate_test_pcap.py  package.json  pnpm-workspace.yaml
.github/workflows/: ci.yml
docs/: architecture.md  building.md  engine_contract.md  local_dev.md  runbook.md
dpi_engine/: README.md
include/: connection_tracker.h  dpi_engine.h  extractor.h  fast_path.h  flow_tracker.h  http_extractor.h  load_balancer.h  packet_parser.h  pcap_reader.h  platform.h  rule_manager.h  sni_extractor.h  thread_safe_queue.h  types.h  utils.h
src/: connection_tracker.cpp  dpi_engine.cpp  dpi_mt.cpp  fast_path.cpp  flow_tracker.cpp  http_extractor.cpp  load_balancer.cpp  main.cpp  main_dpi.cpp  main_simple.cpp  main_working.cpp  packet_parser.cpp  pcap_reader.cpp  rule_manager.cpp  sni_extractor.cpp  types.cpp  utils.cpp
tests/: CMakeLists.txt  test_engine.cpp  test_flowtracker.cpp  test_golden.cpp  test_http.cpp  test_parser.cpp  test_pcap_reader.cpp  test_pcapng.cpp  test_rule_manager.cpp  test_sni.cpp
tests/fixtures/: README.md  golden_minimal_eth.pcap  http.expected_filtered_hash.txt  http.expected_report.json  http.pcap  http.rules.json
web/: index.js  package.json
web/public/: index.html
worker/: package.json  worker.js
